--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.listContent {
+  flex-wrap: wrap;
   display: flex;
-  flex-direction: column;
+  padding: 20px 120px;
+  text-align: center;
+  gap: 20px;
+}
+.test{
+  padding-left: 30px;
+  border-radius: 20px;
+}
+.itemContent {
+  padding: 20px 0;
+  text-align: center;
+  width: calc(33.33% - 20px);
+  background-color: #f8f8f8;
+  box-shadow: rgba(255, 0, 0, 0.3) 0px 7px 29px 0px;
+}
+.nameProduct{
+  cursor: pointer;
+  margin: 0 auto;
+  width: 280px;
+  border-radius: 5px;
+  background: #ffffff;
+  display: flex;
+  padding: 0 10px;
+  justify-content: space-between;
+  box-shadow: rgb(176, 170, 170) 0px 7px 29px 0px;
+  height: 40px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.ant-menu-dark .ant-menu-item-selected {
+  background-color: yellow !important;
+}
+.ant-menu-dark {
+  background-color: white !important;
 }
 
-.App-link {
-  color: #61dafb;
+.ant-menu-horizontal {
+  border-bottom: none !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ant-menu-horizontal .ant-menu-item {
+  margin: 0;
 }
+
+.ant-menu-dark .ant-menu-item {
+  color: black !important;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 10px !important;
+}
+.itemContent {
+  transition: transform 0.6s ease;
+}
+.itemContent:hover {
+  transform: translateY(-8px); 
+}
+.waviy-icon{
+  position: relative;
+  -webkit-box-reflect: below 0px
+  linear-gradient(transparent,rgba(0,0,0,.2))
+}
+.waviy-icon span{
+  background-image: linear-gradient(
+    to left,
+    #d63867 20%,#7a16f5 80%
+    
+);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+  position: relative;
+  display: inline-block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  animation: waviyIcon 1s infinite linear;
+  animation-delay: calc(.1s * var(--i));
+ }
+ @keyframes waviyIcon {
+  0%,
+  40%,
+  100%{
+    transform: translateY(0);
+  }
+  20%{
+    transform: translateY(-20px);
+  }
+ }
